refactor(main): split to 2 instances

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
+    "builds": [
+        {
+            "src": "main_vercel.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "main_vercel.py"
+        }
+    ],
     "crons": [
         {
             "path": "/api/cron",
