--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
     "builds": [
         {
             "src": "app/api/main_vercel.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "python": "3.10",
+                "minifyHandlers": false
+            }
         }
     ],
     "routes": [
